# bookmon

./: .gitignore  AGENTS.md  Cargo.toml  README.md  test.txt
.github/workflows/: release.yml  test.yml  update-homebrew.yml
.opencode/agents/: book-domain-expert.md  reviewer.md  rust-developer.md  ux-designer.md
.opencode/skills/rust-crates/: SKILL.md
.opencode/skills/rust-std-docs/: SKILL.md
Formula/: bookmon.rb
config/: default.toml  default.yml
docs/adr/: 0001-json-file-storage.md  0002-event-sourcing-for-reading-status.md  0003-multi-provider-isbn-lookup.md  0004-repair-prompter-trait.md  0005-book-reviews-with-editor-workflow.md  0006-dependency-version-caps-for-rust-183.md  0007-replace-pretty-table-with-unicode-aware-table.md  0008-yearly-reading-goal.md  0009-motivational-pace-text.md  0010-book-series.md  0011-series-improvements.md  0012-series-grouped-table-display.md  0013-table-column-alignment.md
docs/learnings/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md
homebrew-bookmon/: bookmon.rb
homebrew-bookmon/Formula/: bookmon.rb
src/: author.rs  book.rs  category.rs  config.rs  goal.rs  http_client.rs  lib.rs  main.rs  reading.rs  review.rs  series.rs  storage.rs  table.rs
src/lookup/: book_lookup_dto.rs  http_client.rs  providers.rs
src/lookup/providers/: bibsok.rs  openlibrary.rs
tests/: author_test.rs  book_test.rs  category_test.rs  config_test.rs  factorial_test.rs  goal_test.rs  http_client_test.rs  interactive_test.rs  lookup_test.rs  main_test.rs  reading_test.rs  review_test.rs  series_test.rs  storage_test.rs  table_test.rs
tests/lookup/providers/: bibsok_test.rs  openlibrary_test.rs
