[package]
name = "bookmon"
version = "1.0.65"
edition = "2021"

[dependencies]
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
dialoguer = "0.11"
pretty-table = "0.1.3"
inquire = "0.7.0"
dirs = "6.0"
fuzzy-matcher = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.45", features = ["full"] }
indicatif = "0.17.12"
async-trait = "0.1.88"
scraper = "0.23.1"
regex = "1.10.2"

[dev-dependencies]
tempfile = "3.20"
