[package]
name = "bookmon"
version = "1.0.67"
edition = "2021"

[dependencies]
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = ">=1.17, <1.21", features = ["v4", "serde"] }
pretty-table = "0.1.3"
inquire = "0.9"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.49", features = ["full"] }
indicatif = "0.18"
async-trait = "0.1.89"
scraper = "0.25"
regex = "1.12"
tempfile = ">=3.20, <3.25"

[dev-dependencies]
